# another_path_tracer

./: .clang-format  .clang-tidy  .codedocs  .gitattributes  .gitignore  .makeignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  another_path_tracer.h  another_path_tracer.sln  another_path_tracer.vcxproj  another_path_tracer.vcxproj.filters  main.cpp  makefile  requirements.txt
.github/: issue_template.md  pull_request_template.md
acceleration/: AccelerationGridArray_t.cpp  AccelerationGridArray_t.h  AccelerationGridVector_t.cpp  AccelerationGridVector_t.h  AccelerationGrid_t.cpp  AccelerationGrid_t.h  AccelerationMultiGridArray_t.cpp  AccelerationMultiGridArray_t.h  AccelerationMultiGridVector_t.cpp  AccelerationMultiGridVector_t.h  AccelerationMultiGrid_t.cpp  AccelerationMultiGrid_t.h  GridCellArray_t.cpp  GridCellArray_t.h  GridCellVector_t.cpp  GridCellVector_t.h  GridCell_t.cpp  GridCell_t.h
cameras/: Cam3DAperture_t.cpp  Cam3DAperture_t.h  Cam3DMotionblurAperture_t.cpp  Cam3DMotionblurAperture_t.h  Cam3DMotionblur_t.cpp  Cam3DMotionblur_t.h  Cam3D_t.cpp  Cam3D_t.h  CamAperture_t.cpp  CamAperture_t.h  CamMotionblurAperture_t.cpp  CamMotionblurAperture_t.h  CamMotionblur_t.cpp  CamMotionblur_t.h  Cam_t.cpp  Cam_t.h  IsoCamAperture_t.cpp  IsoCamAperture_t.h  IsoCamMotionblurAperture_t.cpp  IsoCamMotionblurAperture_t.h  IsoCamMotionblur_t.cpp  IsoCamMotionblur_t.h  IsoCam_t.cpp  IsoCam_t.h  RecCamAperture_t.cpp  RecCamAperture_t.h  RecCamMotionblurAperture_t.cpp  RecCamMotionblurAperture_t.h  RecCamMotionblur_t.cpp  RecCamMotionblur_t.h  RecCam_t.cpp  RecCam_t.h  cameras.h
cmake/: APTracerConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
entities/: AccelerationStructure_t.h  Camera_t.cpp  Camera_t.h  DirectionalLight_t.cpp  DirectionalLight_t.h  ImgBufferOpenGL_t.cpp  ImgBufferOpenGL_t.h  ImgBuffer_t.cpp  ImgBuffer_t.h  MaterialMap_t.cpp  MaterialMap_t.h  MaterialMix_t.h  Material_t.h  Medium_t.h  MeshGeometry_t.cpp  MeshGeometry_t.h  OpenGLRenderer_t.cpp  OpenGLRenderer_t.h  RandomGenerator_t.cpp  RandomGenerator_t.h  Ray_t.cpp  Ray_t.h  ScatteringFunction_t.h  SceneContext_t.cpp  SceneContext_t.h  Scene_t.cpp  Scene_t.h  Shape_t.h  Skybox_t.h  Texture_t.cpp  Texture_t.h  TransformMatrix_t.cpp  TransformMatrix_t.h  Vec3f.cpp  Vec3f.h
functions/: Colours.cpp  Colours.h  NextFilename.cpp  NextFilename.h  ReadScene.cpp  ReadScene.h  Referentials.cpp  Referentials.h  Slerp.cpp  Slerp.h
include/: another_path_tracer.h  another_path_tracer.hpp
materials/: Absorber_t.cpp  Absorber_t.h  BounceMaterial_t.cpp  BounceMaterial_t.h  DataMaterial_t.cpp  DataMaterial_t.h  DiffuseFull_t.cpp  DiffuseFull_t.h  DiffuseNormal_t.cpp  DiffuseNormal_t.h  DiffuseTexNormal_t.cpp  DiffuseTexNormal_t.h  DiffuseTex_t.cpp  DiffuseTex_t.h  Diffuse_t.cpp  Diffuse_t.h  DistanceMaterial_t.cpp  DistanceMaterial_t.h  FresnelMixIn_t.cpp  FresnelMixIn_t.h  FresnelMixNormal_t.cpp  FresnelMixNormal_t.h  FresnelMix_t.cpp  FresnelMix_t.h  NonAbsorber_t.cpp  NonAbsorber_t.h  NormalMaterial_t.cpp  NormalMaterial_t.h  PortalScattererTop_t.cpp  PortalScattererTop_t.h  PortalScatterer_t.cpp  PortalScatterer_t.h  PortalTop_t.cpp  PortalTop_t.h  Portal_t.cpp  Portal_t.h  RandomMixIn_t.cpp  RandomMixIn_t.h  RandomMix_t.cpp  RandomMix_t.h  (+35 more)
scenes/: acceleration.xml  airplane.xml  beach.xml  brick.xml  chambre.xml  cube.xml  default.xml  default_bounce.xml  default_distance.xml  diffuse.xml  (+38 more)
src/: CMakeLists.txt  main.cpp
src/acceleration/: AccelerationGridArray_t.cpp  AccelerationGridVector_t.cpp  AccelerationGrid_t.cpp  AccelerationMultiGridArray_t.cpp  AccelerationMultiGridVector_t.cpp  AccelerationMultiGrid_t.cpp  CMakeLists.txt  GridCellArray_t.cpp  GridCellVector_t.cpp  GridCell_t.cpp
src/cameras/: CMakeLists.txt  Cam3DAperture_t.cpp  Cam3DMotionblurAperture_t.cpp  Cam3DMotionblur_t.cpp  Cam3D_t.cpp  CamAperture_t.cpp  CamMotionblurAperture_t.cpp  CamMotionblur_t.cpp  Cam_t.cpp  FishCamAperture_t.cpp  FishCamMotionblurAperture_t.cpp  FishCamMotionblur_t.cpp  FishCam_t.cpp  IsoCamAperture_t.cpp  IsoCamMotionblurAperture_t.cpp  IsoCamMotionblur_t.cpp  IsoCam_t.cpp  RecCamAperture_t.cpp  RecCamMotionblurAperture_t.cpp  RecCamMotionblur_t.cpp  RecCam_t.cpp
src/entities/: CMakeLists.txt  Camera_t.cpp  DirectionalLight_t.cpp  ImgBufferOpenGL_t.cpp  ImgBuffer_t.cpp  MaterialMap_t.cpp  MeshGeometry_t.cpp  OpenGLRenderer_t.cpp  RandomGenerator_t.cpp  Ray_t.cpp  SceneContext_t.cpp  Scene_t.cpp  Texture_t.cpp  TransformMatrix_t.cpp  Vec3f.cpp
src/functions/: CMakeLists.txt  Colours.cpp  Colours.h  NextFilename.cpp  NextFilename.h  Slerp.cpp  Slerp.h  tinyxml2.cpp
src/helpers/: CMakeLists.txt  Colours.cpp  InputParser_t.cpp
src/materials/: Absorber_t.cpp  BounceMaterial_t.cpp  CMakeLists.txt  DiffuseFull_t.cpp  DiffuseNormal_t.cpp  DiffuseTexNormalRough_t.cpp  DiffuseTexNormal_t.cpp  DiffuseTex_t.cpp  Diffuse_t.cpp  DistanceMaterial_t.cpp  FresnelMixIn_t.cpp  FresnelMixNormal_t.cpp  FresnelMix_t.cpp  NonAbsorber_t.cpp  NormalDiffuseMaterial_t.cpp  NormalMaterial_t.cpp  PortalScattererTop_t.cpp  PortalScatterer_t.cpp  PortalTop_t.cpp  Portal_t.cpp  RandomMixIn_t.cpp  RandomMix_t.cpp  ReflectiveFuzzNormal_t.cpp  ReflectiveFuzzTexNormal_t.cpp  ReflectiveFuzzTex_t.cpp  ReflectiveFuzz_t.cpp  ReflectiveNormal_t.cpp  ReflectiveRefractiveFuzz_t.cpp  ReflectiveRefractiveNormal_t.cpp  ReflectiveRefractive_t.cpp  Reflective_t.cpp  RefractiveFuzz_t.cpp  Refractive_t.cpp  ScattererExpFull_t.cpp  ScattererExp_t.cpp  ScattererFull_t.cpp  Scatterer_t.cpp  TextureMixIn_t.cpp  TextureMix_t.cpp  Toon_t.cpp  (+1 more)
src/shapes/: Box_t.cpp  CMakeLists.txt  MeshMotionblur_t.cpp  MeshTop_t.cpp  Mesh_t.cpp  SphereMotionblur_t.cpp  Sphere_t.cpp  TriangleMeshMotionblur_t.cpp  TriangleMesh_t.cpp  TriangleMotionblur_t.cpp  Triangle_t.cpp
src/skyboxes/: CMakeLists.txt  SkyboxFlatSun_t.cpp  SkyboxFlat_t.cpp  SkyboxTextureSun_t.cpp  SkyboxTextureTransformationSun_t.cpp  SkyboxTextureTransformation_t.cpp  SkyboxTexture_t.cpp
tests/: CMakeLists.txt  TransformMatrix_t_test.cpp  example_test.cpp
(+277 files in other folders)
